# santorini-bot

./: .pre-commit-config.yaml  pyproject.toml
santorini_bot/: __init__.py  app.py  board.py  game.py  game_log_reader.py  game_log_writer.py
tests/: test_app.py  test_board.py  test_game.py
